--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <h1>9dreams.it</h1>
 
+    <p>La web agency degli allievi del Settore Informatico del CFP DON BOSCO di San Donà di Piave (VE).
     <p>Sito in costruzione.</p>
 
     <!-- Optional JavaScript -->
