--- a/allievi/StefArgy/index.html
+++ b/allievi/StefArgy/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf8">
-        <title>1A</title>
+        <title>STEFARGY</title>
     </head>
     <body>
         <h1><span style="color:rgb(33, 36, 48)"></h1>
